explicitly specified DEBUG_INFORMATION_FORMAT

--- a/fXDObjC.xcframework/ios-arm64_x86_64-maccatalyst/fXDObjC.framework/Versions/A/Resources/Info.plist
+++ b/fXDObjC.xcframework/ios-arm64_x86_64-maccatalyst/fXDObjC.framework/Versions/A/Resources/Info.plist
@@ -42,6 +42,12 @@
 	<string>16A5202i</string>
 	<key>LSMinimumSystemVersion</key>
 	<string>14.0</string>
+	<key>NSAppleMusicUsageDescription</key>
+	<string>fXDKit may use media information with generated images</string>
+	<key>NSCameraUsageDescription</key>
+	<string>fXDKit may use captured image with generated images</string>
+	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+	<string>fXDKit may use location with generated images</string>
 	<key>UIDeviceFamily</key>
 	<array>
 		<integer>2</integer>
