--- a/fXDObjC.xcframework/ios-arm64_x86_64-maccatalyst/fXDObjC.framework/Versions/A/Resources/Info.plist
+++ b/fXDObjC.xcframework/ios-arm64_x86_64-maccatalyst/fXDObjC.framework/Versions/A/Resources/Info.plist
@@ -27,19 +27,19 @@
 	<key>DTCompiler</key>
 	<string>com.apple.compilers.llvm.clang.1_0</string>
 	<key>DTPlatformBuild</key>
-	<string>24B5024b</string>
+	<string>24A5324a</string>
 	<key>DTPlatformName</key>
 	<string>macosx</string>
 	<key>DTPlatformVersion</key>
-	<string>15.1</string>
+	<string>15.0</string>
 	<key>DTSDKBuild</key>
-	<string>24B5024b</string>
+	<string>24A5324a</string>
 	<key>DTSDKName</key>
-	<string>macosx15.1</string>
+	<string>macosx15.0</string>
 	<key>DTXcode</key>
-	<string>1610</string>
+	<string>1600</string>
 	<key>DTXcodeBuild</key>
-	<string>16B5001e</string>
+	<string>16A5230g</string>
 	<key>LSMinimumSystemVersion</key>
 	<string>14.0</string>
 	<key>NSAppleMusicUsageDescription</key>
