--- a/fXDObjC.xcframework/ios-arm64_x86_64-maccatalyst/fXDObjC.framework/Versions/A/Resources/Info.plist
+++ b/fXDObjC.xcframework/ios-arm64_x86_64-maccatalyst/fXDObjC.framework/Versions/A/Resources/Info.plist
@@ -3,7 +3,7 @@
 <plist version="1.0">
 <dict>
 	<key>BuildMachineOSBuild</key>
-	<string>23G93</string>
+	<string>23H124</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleExecutable</key>
@@ -27,21 +27,21 @@
 	<key>DTCompiler</key>
 	<string>com.apple.compilers.llvm.clang.1_0</string>
 	<key>DTPlatformBuild</key>
-	<string>24A330</string>
+	<string>24B5068a</string>
 	<key>DTPlatformName</key>
 	<string>macosx</string>
 	<key>DTPlatformVersion</key>
-	<string>15.0</string>
+	<string>15.1</string>
 	<key>DTSDKBuild</key>
-	<string>24A330</string>
+	<string>24B5068a</string>
 	<key>DTSDKName</key>
-	<string>macosx15.0</string>
+	<string>macosx15.1</string>
 	<key>DTXcode</key>
-	<string>1600</string>
+	<string>1610</string>
 	<key>DTXcodeBuild</key>
-	<string>16A242</string>
+	<string>16B5029d</string>
 	<key>LSMinimumSystemVersion</key>
-	<string>14.0</string>
+	<string>15.0</string>
 	<key>NSAppleMusicUsageDescription</key>
 	<string>fXDKit may use media information with generated images</string>
 	<key>NSCameraUsageDescription</key>
