--- a/fXDObjC.xcframework/ios-arm64_x86_64-maccatalyst/fXDObjC.framework/Versions/A/Resources/Info.plist
+++ b/fXDObjC.xcframework/ios-arm64_x86_64-maccatalyst/fXDObjC.framework/Versions/A/Resources/Info.plist
@@ -27,19 +27,19 @@
 	<key>DTCompiler</key>
 	<string>com.apple.compilers.llvm.clang.1_0</string>
 	<key>DTPlatformBuild</key>
-	<string>24F74</string>
+	<string>25A5279m</string>
 	<key>DTPlatformName</key>
 	<string>macosx</string>
 	<key>DTPlatformVersion</key>
-	<string>15.5</string>
+	<string>26.0</string>
 	<key>DTSDKBuild</key>
-	<string>24F74</string>
+	<string>25A5279m</string>
 	<key>DTSDKName</key>
-	<string>macosx15.5</string>
+	<string>macosx26.0</string>
 	<key>DTXcode</key>
-	<string>1640</string>
+	<string>2600</string>
 	<key>DTXcodeBuild</key>
-	<string>16F6</string>
+	<string>17A5241e</string>
 	<key>LSMinimumSystemVersion</key>
 	<string>15.0</string>
 	<key>NSAppleMusicUsageDescription</key>
